[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "key-unpack"
version = "0.1.0"
description = "Core and CLI archive password helper."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.7"]

[project.scripts]
key-unpack = "key_unpack.cli:main"
key-unpack-ui = "key_unpack.ui:main"
